gitops/infra/artifact-registry/cluster-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reposilite
  labels:
    app.kubernetes.io/name: reposilite
    app.kubernetes.io/component: artifact-registry
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: reposilite
