gitops/infra/artifact-registry/cluster-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposilite
spec:
  ingressClassName: traefik
  rules:
    - host: maven.b.lab.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reposilite
                port:
                  number: 80
